--- a/categories.html
+++ b/categories.html
@@ -3,3 +3,104 @@ layout: default
 title: Categories
 permalink: /categories/
 ---
+
+<section class="section container categories__grid">
+    <div class="card">
+        <div class="card__top card__top--background">
+            <img class="card__image" />
+        </div>
+        <div class="card__bottom">
+            <h3 class="card__title">Card Title</h3>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__top card__top--background">
+            <img class="card__image" />
+        </div>
+        <div class="card__bottom">
+            <h3 class="card__title">Card Title</h3>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__top card__top--background">
+            <img class="card__image" />
+        </div>
+        <div class="card__bottom">
+            <h3 class="card__title">Card Title</h3>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__top card__top--background">
+            <img class="card__image" />
+        </div>
+        <div class="card__bottom">
+            <h3 class="card__title">Card Title</h3>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__top card__top--background">
+            <img class="card__image" />
+        </div>
+        <div class="card__bottom">
+            <h3 class="card__title">Card Title</h3>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__top card__top--background">
+            <img class="card__image" />
+        </div>
+        <div class="card__bottom">
+            <h3 class="card__title">Card Title</h3>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__top card__top--background">
+            <img class="card__image" />
+        </div>
+        <div class="card__bottom">
+            <h3 class="card__title">Card Title</h3>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__top card__top--background">
+            <img class="card__image" />
+        </div>
+        <div class="card__bottom">
+            <h3 class="card__title">Card Title</h3>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__top card__top--background">
+            <img class="card__image" />
+        </div>
+        <div class="card__bottom">
+            <h3 class="card__title">Card Title</h3>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__top card__top--background">
+            <img class="card__image" />
+        </div>
+        <div class="card__bottom">
+            <h3 class="card__title">Card Title</h3>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card__top card__top--background">
+            <img class="card__image" />
+        </div>
+        <div class="card__bottom">
+            <h3 class="card__title">Card Title</h3>
+        </div>
+    </div>
+</section>
